Bug 23789 - [KMS] xrandr has a wrong output when set panel fitting on LVDS
Summary: [KMS] xrandr has a wrong output when set panel fitting on LVDS
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: medium normal
Assignee: ykzhao
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: NEEDINFO, patch
Depends on:
Blocks:
 
Reported: 2009-09-08 01:56 UTC by zhao jian
Modified: 2009-10-19 01:31 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
xorg.0.log (92.15 KB, text/plain)
2009-09-08 01:56 UTC, zhao jian
no flags Details
Set the LVDS_BORDER when using LVDS panel_fitting (3.78 KB, patch)
2009-10-09 19:28 UTC, ykzhao
no flags Details | Splinter Review

Description zhao jian 2009-09-08 01:56:50 UTC
Created attachment 29333 [details]
xorg.0.log

System Environment:
--------------------------
Host:           x-945gm
Arch:           i386
Platform:        945GM
OSD:            Fedora release 9 (Sulphur)
Libdrm:         (master)121b9648f846d900e67818869974ee82046e9b25
Mesa:           (master)65c79c9cbd58b164a61b72f7ffe13031c33485cf
Xserver:                (master)1f61bbeffdf2ad5a2c54121c75f3b049baf01708
Xf86_video_intel:       (master)e903b3ebad29d943c05ff550940034c3a43e0235
Kernel: (drm-intel-next)01dfba93d9dfcf6d7abfc55ff5d9d6e76fa01ba0

Bug detailed description:
--------------------------
Start X and run xrandr --output LVDS1 --set "scaling mode" "No scale", then set its resolution to a smaller one. The desktop should be at the center but it now lie at the left and at the right is blank. 

Reproduce steps:
----------------
1. xinit&
2. xrandr --output LVDS1 --set "scaling mode" "No scale"
3. xrandr --output LVDS1 --mode 1024x768(or any other resolution smaller than original one)
Comment 1 ykzhao 2009-10-09 19:28:36 UTC
Created attachment 30240 [details] [review]
Set the LVDS_BORDER when using LVDS panel_fitting

Will you please try the attached patch and see whether the issue still exists?
Thanks.
Comment 2 ykzhao 2009-10-13 20:23:59 UTC
The commit is already shipped in Eric's drm-intel-next tree. So this bug will be marked as resolved.
   >commit a3e17eb8f4080a79738a938abe718be255247a44
Author: Zhao Yakui <yakui.zhao@intel.com>
Date:   Sat Oct 10 10:42:37 2009 +0800

    drm/i915: Set the LVDS_BORDER when using LVDS scaling mode

   Thanks.

Comment 3 zhao jian 2009-10-19 01:31:18 UTC
(In reply to comment #2)
> The commit is already shipped in Eric's drm-intel-next tree. So this bug will
> be marked as resolved.
>    >commit a3e17eb8f4080a79738a938abe718be255247a44
> Author: Zhao Yakui <yakui.zhao@intel.com>
> Date:   Sat Oct 10 10:42:37 2009 +0800
>     drm/i915: Set the LVDS_BORDER when using LVDS scaling mode
>    Thanks.

I tested with the newest kernel on drm-intel-next branch, its commit is a83a4400415893d2599a256f6842ac4d871dffd7, it now works well on 945GM, 965GM and GM45. 


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.